no more "Group is a raw type. References to generic type Group<E> should be parameterized"
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@8731 28e8926c-6b08-0410-baaa-805c5e19b8d6